kustomize/applications/centraldashboard/base/patches/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: centraldashboard
spec:
  gateways:
  - ingress-kubeflow/ingress-kubeflow-istio-ingress-gateway-https
