kustomize/applications/centraldashboard/base/patches/authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: central-dashboard
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            principals:
              - cluster.local/ns/ingress-kubeflow/sa/ingress-kubeflow
  selector:
    matchLabels:
      app: centraldashboard
